Revision history for perl distribution Mojolicious-Plugin-Webpack

0.04 Not Released
 - Add M::P::Webpack::Builder to make M::P::Webpack a production shim
 - M::P::Webpack::Builder can install a shim into your application

0.03 2018-12-20T12:50:22+0900
 - Add url_for() method
 - Will migrate assetpack.def from AssetPack into webpack custom config
 - Change webpack to only run when requested
 - Documented how to test your assets

0.02 2018-11-16T19:53:02+0900
 - Fix markup.t

0.01 2018-11-07T15:44:27+0900
 - Will automatically setup webpack config files
 - Can process CSS, JavaScript, Sass and Vue
 - Can extend the webpack config file
 - Add automatic installation of node modules
 - Add crushinator for development