@@ -9,7 +9,6 @@ my $server = $server_class->new;
 
 is $ENV{MOJO_WEBPACK_DEBUG}, 0, 'MOJO_WEBPACK_DEBUG';
 is $ENV{MOJO_WEBPACK_LAZY},  1, 'MOJO_WEBPACK_LAZY';
-is $ENV{MOJO_WEBPACK_BUILD}, 1, 'MOJO_WEBPACK_BUILD';
 
 is + ($server->parse_argv('my_app.pl'))[1], 'my_app.pl', 'arg my_app.pl';
 
