@@ -1,6 +1,7 @@
 Revision history for perl distribution Mojolicious-Plugin-Webpack
 
 0.04 Not Released
+ - Fix typo in webpack.custom.js
  - Add M::P::Webpack::Builder to make M::P::Webpack a production shim
  - M::P::Webpack::Builder can install a shim into your application
 
